hphp/test/zend/good/ext-spl/bug51532.php
<?php

class A extends SplFileObject {
    public function fscanf($format) {

    }
}
?>
===DONE===